@startuml
package CollectionBuilder {
  class CollectionBuilder {
    - array[LogFile] files

    # void addLog(path, parser)
    + void addApacheLog(path)
    + void addLtsvLog(path)
    + Collection build()
  }

  class LogFile {
    - string path
    - ParserInterface parser
  }

  class SplFileObject {
  }

  interface ParserInterface {
  }

  class ApacheLogParser {
    - string format
  }

  class LtsvParser {
  }
}

package Collection {
  class Collection {
    - array[int] itemIds
    - DatabaseInterface db

    + View dimension(key, callable = null)
    + int count()
    + array showScheme()
  }

  class ColumnarDatabase {
  }

  interface DatabaseInterface {
    - array scheme
    + ColumnInterface getColumn(key)
    + array getScheme()
  }

  class FileStorageColumn {
    - array values
    - array dictionary
  }

  class InMemoryColumn {
    - array values
    - array dictionary
  }

  interface ColumnInterface {
    + void add(value, itemId)
  }
}

package View {
  class View {
    - array[Collection] collections

    + void addColumn(key, callable = null)
    + Collection getCollection(dimensionValue)
    + array showScheme()
  }

  interface ColumnValueStrategyInterface {
  }

  abstract class AbstractColumnValueStrategy {
  }

  class DimensionStrategy {
  }

  class CountStrategy {
  }
}

package Presenter {
  class ProgressBarObserver {
  }

  class ConsoleTable {
  }
}

LogFile "0..n" -- "1" ParserInterface
LogFile <|-- SplFileObject
View o- Collection : create
View o-- ColumnValueStrategyInterface
CollectionBuilder .> Collection : create
CollectionBuilder o-- LogFile
Collection "1..n" *-- "1" DatabaseInterface
ApacheLogParser <|- ParserInterface
LtsvParser <|- ParserInterface
ColumnarDatabase <|- DatabaseInterface
FileStorageColumn <|- ColumnInterface
InMemoryColumn <|- ColumnInterface
DatabaseInterface o-- ColumnInterface
AbstractColumnValueStrategy <|- ColumnValueStrategyInterface
DimensionStrategy <|- AbstractColumnValueStrategy
CountStrategy <|- AbstractColumnValueStrategy
ProgressBarObserver "1" -- "0..1" CollectionBuilder
ConsoleTable <.. View : create
@enduml
